# 3d_print_infill_app

./: .dockerignore  .gitignore  Dockerfile  README.md  context.md  implementation_plan.md  pyproject.toml  run_app.bat  run_app.sh
old_code/: lattice_structure.gcode  main.py  new_test.py  output_print_3.0.gcode  plot.py  plot2.py  test.py  test_graph.py  test_new_one_layer.py  test_one_layer.py  unitcell.py
old_code/output/: print_path.gcode
output/gcode/: honeycom-2.gcode  honeycomb-3.gcode  lattice_print.gcode  reentrant-2.gcode  reentrant-3.gcode  snake.gcode
output/honeycomb/: graph-data.json  graph-dimensions.json  loop-catalog.json
output/honeycomb/2-layer-setting/: connected-layer-results.json  layers.json  (+1 more)
output/reentrant/: graph-data.json  graph-dimensions.json  loop-catalog.json
output/snake/: graph-data.json  graph-dimensions.json  loop-catalog.json
samples/: arrowhead.DXF  bone.DXF  double_octagon.DXF  grid_2x3.dxf  hexagon.DXF  honeycomb.DXF  octagon.DXF  octagon2.DXF  reentrant.DXF  simple_line.dxf  simple_polyline.dxf  snake.DXF  square.DXF  tetrachiral.DXF  triangle.DXF  triangular_circle.DXF
src/: __init__.py  app.py  publication_plots.py
src/assets/: style.css
src/callbacks/: __init__.py  tab_1_callbacks.py  tab_2_callbacks.py  tab_3_callbacks.py  tab_4_callbacks.py
src/components/: main_layout.py  tab_1.py  tab_2.py  tab_3.py  tab_4.py  tab_factory.py
src/core/: __init__.py  auto_selector.py  dxf_parser.py  gcode.py  layer_builder.py  loop_finder.py  pathing.py  periodic_graph.py  plot_utils.py  tiling.py
(+18 files in other folders)
